--- a/Backend/classroom/views/page.ejs
+++ b/Backend/classroom/views/page.ejs
@@ -6,7 +6,8 @@
     <title>flash</title>
 </head>
 <body>
-    <%=msg%>
-    <h4>hello <%=name%></h4>
+    <%=successmsg%>
+    <%=errormsg%>
+    <h1>hello <%=name%></h1>
 </body>
 </html>
